chore: remove try-catch requirement by using StandardCharsets